--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3411,7 +3411,9 @@ body {
   position: relative; }
   .site-header.video-header + .hero {
     position: relative;
-    height: 100%; }
+    height: 100%;
+    background-color: #000;
+    color: #000; }
     .site-header.video-header + .hero aside {
       position: relative; }
     .site-header.video-header + .hero #wp-custom-header {
