100vh video, centered

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3410,17 +3410,20 @@ body {
   padding: 0;
   position: relative; }
   .site-header.video-header + .hero {
+    overflow: hidden;
     position: relative;
-    height: 100%;
     background-color: #000;
     color: #000; }
     .site-header.video-header + .hero aside {
       position: relative; }
     .site-header.video-header + .hero #wp-custom-header {
       position: absolute;
-      height: 100%;
+      height: 100vh;
       top: 0;
-      right: 0; }
+      right: 0;
+      left: 0;
+      bottom: 0;
+      margin: auto; }
       .site-header.video-header + .hero #wp-custom-header img {
         display: none; }
     .site-header.video-header + .hero #wp-custom-header-video-button {
