--- a/.dev/sass/partials/_video-header.scss
+++ b/.dev/sass/partials/_video-header.scss
@@ -1,8 +1,8 @@
 &.video-header {
 
 	+.hero {
+		overflow: hidden;
 		position: relative;
-		height: 100%;
 		background-color: #000;
 		color: #000;
 
@@ -12,9 +12,12 @@
 
 		#wp-custom-header {
 			position: absolute;
-			height: 100%;
+			height: 100vh;
 			top: 0;
 			left: 0;
+			right: 0;
+			bottom: 0;
+			margin: auto;
 
 			img {
 				display: none;
@@ -26,7 +29,6 @@
 			bottom: 0.5em;
 			left: 1em;
 			opacity: 0.5;
-			z-index: 11;
 		}
 
 		iframe#wp-custom-header-video {
