Hide wp-custom-header image when no video initialized

--- a/.dev/sass/partials/_header.scss
+++ b/.dev/sass/partials/_header.scss
@@ -190,6 +190,10 @@ html {
 			background: transparent;
 		}
 
+		#wp-custom-header img {
+			display: none;
+		}
+
 	}
 
 	@media screen and (max-width: 900px) {
