--- a/style.css
+++ b/style.css
@@ -4417,3 +4417,123 @@ body.woocommerce-cart .primer-wc-cart-sub-menu {
     padding-right: 0 !important; }
   .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart {
     width: 100%; } }
+
+/*--------------------------------------------------------------
+>>> Gutenberg:
+--------------------------------------------------------------*/
+.wp-block-cover-image {
+  margin-bottom: 1.5rem; }
+
+.wp-block-cover-image.alignfull,
+.wp-block-image.alignfull,
+.wp-block-cover-text.alignfull,
+.wp-block-gallery.alignfull,
+.wp-block-text-columns.alignfull {
+  margin-left: -28.6%;
+  width: 157.2%; }
+  .wp-block-cover-image.alignfull figcaption,
+  .wp-block-image.alignfull figcaption,
+  .wp-block-cover-text.alignfull figcaption,
+  .wp-block-gallery.alignfull figcaption,
+  .wp-block-text-columns.alignfull figcaption {
+    padding: 0 3.375em; }
+  @media only screen and (min-width: 40.063em) and (max-width: 64em) {
+    .wp-block-cover-image.alignfull,
+    .wp-block-image.alignfull,
+    .wp-block-cover-text.alignfull,
+    .wp-block-gallery.alignfull,
+    .wp-block-text-columns.alignfull {
+      margin-left: -4.4375rem;
+      width: -webkit-calc( 100% + 8.875rem);
+      width: calc( 100% + 8.875rem); }
+      .wp-block-cover-image.alignfull figcaption,
+      .wp-block-image.alignfull figcaption,
+      .wp-block-cover-text.alignfull figcaption,
+      .wp-block-gallery.alignfull figcaption,
+      .wp-block-text-columns.alignfull figcaption {
+        padding: 0 2.375em; } }
+  @media only screen and (max-width: 40em) {
+    .wp-block-cover-image.alignfull,
+    .wp-block-image.alignfull,
+    .wp-block-cover-text.alignfull,
+    .wp-block-gallery.alignfull,
+    .wp-block-text-columns.alignfull {
+      margin-left: -2.4375rem;
+      width: -webkit-calc( 100% + 4.875rem);
+      width: calc( 100% + 4.875rem); }
+      .wp-block-cover-image.alignfull figcaption,
+      .wp-block-image.alignfull figcaption,
+      .wp-block-cover-text.alignfull figcaption,
+      .wp-block-gallery.alignfull figcaption,
+      .wp-block-text-columns.alignfull figcaption {
+        padding: 0 1em; } }
+
+.wp-block-cover-image.alignfull img,
+.wp-block-image.alignfull img,
+.wp-block-cover-image.alignwide img,
+.wp-block-image.alignwide img {
+  width: 100%; }
+
+.wp-block-cover-image.alignwide,
+.wp-block-image.alignwide,
+.wp-block-cover-text.alignwide,
+.wp-block-image.alignwide,
+.wp-block-gallery.alignwide,
+.wp-block-text-columns.alignwide {
+  margin-left: -4.4375rem;
+  width: -webkit-calc( 100% + 8.875rem);
+  width: calc( 100% + 8.875rem); }
+  @media only screen and (min-width: 40.063em) and (max-width: 64em) {
+    .wp-block-cover-image.alignwide,
+    .wp-block-image.alignwide,
+    .wp-block-cover-text.alignwide,
+    .wp-block-image.alignwide,
+    .wp-block-gallery.alignwide,
+    .wp-block-text-columns.alignwide {
+      margin-left: -1.75rem;
+      width: -webkit-calc( 100% + 3.5rem);
+      width: calc( 100% + 3.5rem); } }
+  @media only screen and (max-width: 40em) {
+    .wp-block-cover-image.alignwide,
+    .wp-block-image.alignwide,
+    .wp-block-cover-text.alignwide,
+    .wp-block-image.alignwide,
+    .wp-block-gallery.alignwide,
+    .wp-block-text-columns.alignwide {
+      margin-left: -0.75rem;
+      width: -webkit-calc( 100% + 1.5rem);
+      width: calc( 100% + 1.5rem); } }
+
+.wp-block-image.alignleft,
+.wp-block-gallery.alignleft,
+.wp-block-video.alignleft,
+.wp-block-quote.alignleft,
+.wp-block-text-columns.alignleft,
+.entry-content ul.alignleft,
+.entry-content ol.alignleft,
+.wp-block-cover-text.alignleft {
+  max-width: 40%;
+  margin: 0 1.5em 1.5em 0; }
+
+.wp-block-image.alignright,
+.wp-block-gallery.alignright,
+.wp-block-video.alignright,
+.wp-block-quote.alignright,
+.wp-block-text-columns.alignright,
+.entry-content ul.alignright,
+.entry-content ol.alignright,
+.wp-block-cover-text.alignright {
+  max-width: 40%;
+  margin: 0 0 1.5em 1.5em; }
+
+body.customize-support {
+  overflow-x: hidden; }
+  body.customize-support h1,
+  body.customize-support h2,
+  body.customize-support h3,
+  body.customize-support h4,
+  body.customize-support h5,
+  body.customize-support h6,
+  body.customize-support .site-title,
+  body.customize-support .page-title {
+    clear: none; }
