--- a/.dev/sass/partials/_forms.scss
+++ b/.dev/sass/partials/_forms.scss
@@ -11,12 +11,12 @@ textarea {
 	font-family: $sans-font-family;
 }
 
-button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):not([class^="fl-"]),
-a.button:not(.wc-forward):not(.add_to_cart_button):not( .customize-partial-edit-shortcut-button ),
-a.button:visited:not(.wc-forward):not(.add_to_cart_button):not( .customize-partial-edit-shortcut-button ),
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+#page button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button),
+#page a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button),
+#page a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button),
+#page input[type="button"],
+#page input[type="reset"],
+#page input[type="submit"] {
 	border: none;
 	color: #181818;
 	text-transform: uppercase;
