--- a/editor-style-rtl.css
+++ b/editor-style-rtl.css
@@ -1841,12 +1841,12 @@ textarea {
   /* Improves appearance and consistency in all browsers */
   font-family: "Roboto", sans-serif; }
 
-button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):not([class^="fl-"]),
-a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button),
-a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button),
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
+#page button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button),
+#page a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button),
+#page a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button),
+#page input[type="button"],
+#page input[type="reset"],
+#page input[type="submit"] {
   border: none;
   color: #181818;
   text-transform: uppercase;
@@ -1861,12 +1861,12 @@ input[type="submit"] {
   background: transparent;
   padding: .75rem 0;
   display: inline-block; }
-  button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):not([class^="fl-"])::after,
-  a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after,
-  a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after,
-  input[type="button"]::after,
-  input[type="reset"]::after,
-  input[type="submit"]::after {
+  #page button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after,
+  #page a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after,
+  #page a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after,
+  #page input[type="button"]::after,
+  #page input[type="reset"]::after,
+  #page input[type="submit"]::after {
     content: '\f501';
     font-family: 'Genericons';
     display: inline;
@@ -1876,36 +1876,36 @@ input[type="submit"] {
     position: relative;
     -webkit-transition: .2s all;
     transition: .2s all; }
-    .fl-lightbox button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):not([class^="fl-"])::after, .fl-lightbox
-    a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after, .fl-lightbox
-    a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after, .fl-lightbox
-    input[type="button"]::after, .fl-lightbox
-    input[type="reset"]::after, .fl-lightbox
-    input[type="submit"]::after {
+    .fl-lightbox #page button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after, .fl-lightbox
+    #page a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after, .fl-lightbox
+    #page a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button)::after, .fl-lightbox
+    #page input[type="button"]::after, .fl-lightbox
+    #page input[type="reset"]::after, .fl-lightbox
+    #page input[type="submit"]::after {
       content: ''; }
-  button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):not([class^="fl-"]):hover, button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):not([class^="fl-"]):focus, button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):not([class^="fl-"]):active,
-  a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover,
-  a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):focus,
-  a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):active,
-  a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover,
-  a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):focus,
-  a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):active,
-  input[type="button"]:hover,
-  input[type="button"]:focus,
-  input[type="button"]:active,
-  input[type="reset"]:hover,
-  input[type="reset"]:focus,
-  input[type="reset"]:active,
-  input[type="submit"]:hover,
-  input[type="submit"]:focus,
-  input[type="submit"]:active {
+  #page button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover, #page button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):focus, #page button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):active,
+  #page a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover,
+  #page a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):focus,
+  #page a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):active,
+  #page a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover,
+  #page a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):focus,
+  #page a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):active,
+  #page input[type="button"]:hover,
+  #page input[type="button"]:focus,
+  #page input[type="button"]:active,
+  #page input[type="reset"]:hover,
+  #page input[type="reset"]:focus,
+  #page input[type="reset"]:active,
+  #page input[type="submit"]:hover,
+  #page input[type="submit"]:focus,
+  #page input[type="submit"]:active {
     background: transparent !important; }
-  button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):not([class^="fl-"]):hover:after,
-  a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover:after,
-  a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover:after,
-  input[type="button"]:hover:after,
-  input[type="reset"]:hover:after,
-  input[type="submit"]:hover:after {
+  #page button:not(.single_add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover:after,
+  #page a.button:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover:after,
+  #page a.button:visited:not(.wc-forward):not(.add_to_cart_button):not(.customize-partial-edit-shortcut-button):hover:after,
+  #page input[type="button"]:hover:after,
+  #page input[type="reset"]:hover:after,
+  #page input[type="submit"]:hover:after {
     right: 8px;
     -webkit-transition: .2s all;
     transition: .2s all; }
